testsuite/tests/typecheck/should_fail/T8912.stderr

T8912.hs:7:10: error:
    • Illegal implicit parameter ‘?imp::Int’
    • In the context: ?imp::Int
      While checking an instance declaration
      In the instance declaration for ‘C [a]’
